--- a/COVID-19.html
+++ b/COVID-19.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="cid-rTNisbfU32 mbr-fullscreen mbr-parallax-background" id="header2-g">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-rTNisbfU32 mbr-fullscreen mbr-parallax-background" id="header2-g">
 
     
 
@@ -194,7 +194,7 @@
                     CORONA INDIA DATASHEET</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5"></p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://covidout.in/">CLICK HERE</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://covidout.in/" target="_blank">CLICK HERE</a></div>
             </div>
         </div>
     </div>
